Fixed spacing between text and featured projects

--- a/src/css/project.css
+++ b/src/css/project.css
@@ -192,6 +192,10 @@ li{
   display: none;
 }
 
+.project-featured > .text-wrapper{
+  top: -150px;
+}
+
 @media only screen and (max-width: 800px){
   .projects-wrapper{
     width: 100%;
